--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 node_modules/
 auth.json
+minimal-auth.json
 .env
 *.log
+
+# Python
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.egg-info
+.pytest_cache/
